test/classes/bradc/weirdinit.good
weirdinit.chpl:6: In function 'main':
weirdinit.chpl:7: error: 'a' is used to define itself
